     of the setup script. (#2551)
   * Automatically parse track numbers from file names like 01.flac for better
     cluster->album matching with untagged files.
   * Support for the new sorting tags in MP4 tags from iTunes 7.1.
   * Strip white-space from directory names. (#2558)
   * When replacing characters with their ascii equivalent, 'ß' should be
     replaced by 'ss'. (#2610)
 * Bug Fixes:
   * Artist names from ARs should be translated, too.
   * Freeze after answering no to "download the new version" prompt. (#2542)
   * %musicbrainz_albumid% not working in file renaming. (#2543)
   * Track time appears to display incorrectly if it's unknown on
     MusicBrainz. (#2548)
   * Fixed problem with removing albums/files after submitting PUIDs (#2556)
   * The user's script should be applied also to album metadata.
 * Internals:
   * The browser integration HTTP server rewritten using QTcpServer.

Version 0.9.0alpha5 - 2007-03-18
 * New Features:
   * Replace Æ with AE in file/directory names. (#2512)
   * "Add cluster as release" (#1049)
   * Text labels under icon buttons. (#2476)
 * Bug Fixes:
   * Fixed fileId generator (caused problems with drag&drop
     if files with multiple formats are used).
   * Original Metadata not greyed out when no tracks are attached. (#2461)
   * Better detecting of the default Windows browser, with fallback to
     Internet Explorer. (#2502)
   * Better album/track lookup. (#2521)
   * File browser stays 'hidden' after first time use. (#2480)
   * Track length changed in Original Metadata after save. (#2510)
   * "Send PUIDs" button not disabled after albums are removed. (#2506)
   * The Windows package now includes JPEG loader to show cover art
     images correctly. (#2478)

Version 0.9.0alpha4 - 2007-03-09
 * Bug Fixes:
   * Fixed case-insentive file renaming. (#2457, #2513)

Version 0.9.0alpha3 - 2007-03-08
 * New Features:
   * Using of 'performed by' AR types (without instrument or vocal).