@@ -163,7 +163,10 @@ class Album(DataObject, Item):
         self._new_tracks = []
         self._requests = 1
         if self.config.setting['release_ars'] or self.config.setting['track_ars']:
-            inc = ('tracks', 'puids', 'artist', 'release-events', 'artist-rels')
+            if self.config.setting['track_ars']:
+                inc = ('tracks', 'puids', 'artist', 'release-events', 'artist-rels', 'track-level-rels')
+            else:
+                inc = ('tracks', 'puids', 'artist', 'release-events', 'artist-rels')
         else:
             inc = ('tracks', 'puids', 'artist', 'release-events')
         self.tagger.xmlws.get_release_by_id(self.id, self._release_request_finished, inc=inc)
